--- a/src/index.css
+++ b/src/index.css
@@ -28,8 +28,9 @@ body{
   background-color: transparent;
 }
 
-.visible {
+.overlay .visible {
   opacity: 1;
+  pointer-events: auto;
 }
 
 .invisible {
@@ -139,21 +140,6 @@ label.nav-link{
 
 .dropdown:hover .dropdown-content {
   display: block;
-}
-
-.delete{
-  top:45rem;
-  left: 92rem;
-  position: absolute;
-  width: 3rem;
-  height: 3rem;
-  pointer-events: auto;
-  cursor: pointer;
-  transition: opacity 0.3s;
-}
-
-.delete:hover {
-  opacity: 0.6;
 }
 
 .content {
