--- a/src/menu.css
+++ b/src/menu.css
@@ -35,8 +35,9 @@
 	height: 2rem;
 	width: 2rem;
 	margin-top: 0.4rem;
-	margin-bottom: 20px;
+	margin-bottom: 2rem;
 	margin-left: 0.3rem;
+	margin-right: 0.3rem;
 	padding: 0.3rem;
 	border-radius: 8px;
 	display: inline-flex;
