--- a/src/index.css
+++ b/src/index.css
@@ -41,6 +41,7 @@ body{
   font-family: "Racing Sans One", sans-serif;
   color: #de1d1d;
   font-size: 2rem;
+  padding-left: 2rem;
 }
 
 .nav-bar {
